--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="socials">
-    <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://github.com/ilashchukv" target="_blank"><i class="fab fa-github"></i></a>
     <a href="https://linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin"></i></a>
     <a href="mailto:ilaschukvasyl2007@gmail.com"><i class="fas fa-envelope"></i></a>
   </div>
